[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
holdem_suite_parser = { path = "../parser" }
holdem_suite_db = { path = "../db" }
clap = { version = "4.3.19", features = ["derive"] }
notify = "6.0.1"
anyhow = "1.0.72"

