[package]
name = "holdem_suite_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
diesel = { version = "2.1.0", features = ["sqlite"] }
holdem_suite_parser = { path = "../parser" }
serde = { version = "1.0.178", features = ["derive"] }
