[package]
name = "holdem_suite_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.12", features = ["derive"] }
diesel = { version = "2.1.0", features = ["sqlite"] }
nom = "7.1.3"
serde = { version = "1.0.174", features = ["derive"] }

