[package]
name = "gui"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "window-create", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
holdem_suite_db = { path = "../../db" }
holdem_suite_parser = {path = "../../parser"}
notify = "6.0.1"
x11rb = "0.12.0"
nom = "7.1.3"
anyhow = "1.0.72"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
