[package]
name = "gui"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "window-close", "window-create", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
holdem_suite_db = { path = "../../db" }
holdem_suite_parser = {path = "../../parser"}
notify = "6.0.1"
nom = "7.1.3"
anyhow = "1.0.72"
thiserror = "1.0.46"
diesel = { version = "2.1.0", features = ["sqlite"] }
uuid = { version = "1.4.1", features = ["v4"] }
toml = "0.7.6"

[target.'cfg(unix)'.dependencies]
x11rb = "0.12.0"

[target.'cfg(windows)'.dependencies]
libsqlite3-sys = { version = ">=0.17.2, <0.27.0", features = ["bundled"] }
windows = { version = "0.51.1", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }


[dev-dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
diesel = { version = "2.1.0", features = ["sqlite"] }
diesel_migrations = { version = "2.1.0", features = ["sqlite"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
